planka/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: planka-postgres
  namespace: planka
spec:
  type: ClusterIP
  selector:
    app: planka-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
