planka/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planka
  namespace: planka
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: tasks.finalq.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: planka
                port:
                  number: 1337
